# termcandy

./: .gitignore  Cargo.toml  README.md
examples/: balls.rs
src/: cycle_buffer.rs  events.rs  input.rs  layout.rs  lib.rs  logger.rs  macros_impl.rs  run.rs  screen.rs  widget.rs
src/graphics/: color.rs  mod.rs  rect.rs  style.rs  surface.rs
src/input/: event_stream.rs  event_watcher.rs  events.rs  mod.rs
src/io/: alternate_screen.rs  force_write.rs  mod.rs  mouse_terminal.rs  non_blocking.rs  owned_evented_fd.rs  raw_mode.rs
src/terminal/: alternate_screen.rs  mod.rs  mouse_terminal.rs  non_blocking.rs  raw_mode.rs
termcandy-macros/: Cargo.toml
termcandy-macros/src/: lib.rs
widget-macro/: Cargo.toml
widget-macro/src/: lib.rs
