[package]
name = "termcandy"
version = "0.1.0"
authors = ["Andrew Cann <shum@canndrew.org>"]
edition = "2018"

[dependencies]
futures = "0.1"
widget-macro = { path = "widget-macro", version = "0.1.0" }
tokio = "0.1.17"
libc = "0.2.50"
mio = "0.6.16"
unicode-width = "0.1.5"
tokio-signal = "0.2.7"
termion = "1.5.1"
log = "0.4.6"
failure = "0.1.5"
lazy_static = "1.3.0"
slab = "0.4.2"

