[package]
name = "termcandy"
version = "0.2.0"
authors = ["Andrew Cann <shum@canndrew.org>"]
edition = "2018"
documentation = "https://docs.rs/termcandy"
repository = "https://github.com/canndrew/termcandy"
license = "LGPL-2.0-only"
description = "terminal GUI library"

[dependencies]
futures = "0.3.8"
termcandy-macros = { path = "termcandy-macros", version = "0.1.0" }
tokio = { version = "0.3.4", features = ["full"] }
libc = "0.2.80"
unicode-width = "0.1.8"
termion = "1.5.5"
log = "0.4.11"
lazy_static = "1.4.0"
slab = "0.4.2"
pin-project = "1.0.2"
pin-utils = "0.1.0"

