[package]
name = "termcandy-macros"
version = "0.1.0"
authors = ["Andrew Cann <shum@canndrew.org>"]
edition = "2018"
documentation = "https://docs.rs/termcandy"
repository = "https://github.com/canndrew/termcandy"
license = "LGPL-2.0-only"
description = "macros for termcandy"

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15", features = ["full", "visit-mut", "extra-traits"] }
quote = "0.6"
proc-macro2 = "0.4.27"

